--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <style>
+      .flotante {
+        position: absolute;
+        top 10px;
+        text-align: center;
+        width: 100%;
+      }
       svg {
         display: block;
         margin: 0 auto;
@@ -12,6 +18,7 @@
 </head>
 
 <body>
+  <h3 class="flotante">Selecciona un tema.</h3>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://d3js.org/d3-selection.v1.min.js"></script>
   <script src="https://d3js.org/d3-color.v1.min.js"></script>
